Fix illegible alerts

--- a/src/assets/styles/type/type.css
+++ b/src/assets/styles/type/type.css
@@ -72,18 +72,16 @@ code {
 }
 
 .markdown-alert {
-	padding: 0.5rem 1rem;
-	background: light-dark(oklch(76% 0.03 55 / 0.3), oklch(24% 0.006 17.6 / 0.3));
-	border: 0.05rem solid light-dark(transparent, var(--grey));
+	padding: 1rem;
+	background: light-dark(var(--white), var(--black));
 	border-left: 0.3rem solid var(--grey);
+	border-radius: 1rem;
 }
 
 .markdown-alert-title {
 	display: flex;
 	gap: 1ch;
 	align-items: center;
-	color: var(--alert_colour);
-	fill: var(--alert_coolour);
 }
 
 .markdown-alert-note {
